--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -153,7 +153,7 @@
   year         = {2020}
 }
 
-@misc{jigsaw,
+@misc{jigsaw-comp1,
   author    = {cjadams and 
                Jeffrey Sorensen and 
                Julia Elliott and 
@@ -165,6 +165,33 @@
   publisher = {Kaggle},
   year      = {2017},
   url       = {https://kaggle.com/competitions/jigsaw-toxic-comment-classification-challenge}
+}
+
+@misc{jigsaw-comp2,
+  author    = {cjadams and
+               Daniel Borkan and
+               inversion and
+               Jeffrey Sorensen and
+               Lucas Dixon and
+               Lucy Vasserman and
+               nithum},
+  title     = {Jigsaw Unintended Bias in Toxicity Classification},
+  publisher = {Kaggle},
+  year      = {2019},
+  url       = {https://kaggle.com/competitions/jigsaw-unintended-bias-in-toxicity-classification}
+}
+
+@misc{jigsaw-comp3,
+  author    = {Ian Kivlichan and
+               Jeffrey Sorensen and
+               Julia Elliott and
+               Lucy Vasserman and
+               Martin Görner and
+               Phil Culliton},
+  title     = {Jigsaw Multilingual Toxic Comment Classification},
+  publisher = {Kaggle},
+  year      = {2020},
+  url       = {https://kaggle.com/competitions/jigsaw-multilingual-toxic-comment-classification}
 }
 
 @article{bert_self_attention,
@@ -295,7 +322,7 @@
   pages        = {216-225}
 }
 
-@inproceedings{Radford2019LanguageMA,
+@misc{Radford2019LanguageMA,
   title  = {Language Models are Unsupervised Multitask Learners},
   author = {Alec Radford and 
             Jeff Wu and
@@ -304,4 +331,11 @@
             Dario Amodei and
             Ilya Sutskever},
   year   = {2019}
+}
+
+@online{nvidia-titan-xp,
+  author = {NVIDIA},
+  title = {{NVIDIA TITAN Xp}},
+  year = 2023,
+  url = {https://www.nvidia.com/en-us/titan/titan-xp/},
 }
